--- a/web/css/password.css
+++ b/web/css/password.css
@@ -53,7 +53,7 @@
 .password article p.prompt span{
 	color:red;
 }
-.password article p input[type="text"], .password article p input[type="password"] {
+.password article p input.text, .password article p input.password {
 	border: 1px solid #CCC;
 	font-size: 16px;
 	padding: 5px;
@@ -61,7 +61,7 @@
 	width: 250px;
 	margin: 1px;
 }
-.password article p input[type="text"]:hover, .password article p input[type="text"]:focus, .password article p input[type="password"]:hover, .password article p input[type="password"]:focus {
+.password article p input.text:hover, .password article p input.text:focus, .password article p input.password:hover, .password article p input.password:focus {
 	border: 2px solid #7fcaf1;
 	margin: 0px;
 }
@@ -121,15 +121,16 @@
 	float: left;
 	line-height: 35px;
 }
-.password article ul li dt input[type="text"], .password article ul li dt input[type="password"] {
+.password article ul li dt input.text, .password article ul li dt input.password {
 	border: 1px solid #CCC;
 	font-size: 14px;
 	padding: 5px;
 	vertical-align: middle;
 	width: 230px;
 	margin: 1px;
+	text-align:left;
 }
-.password article ul li dt input[type="text"]:hover, .password article ul li dt input[type="text"]:focus, .password article ul li dt input[type="password"]:hover, .password article ul li dt input[type="password"]:focus {
+.password article ul li dt input.text:hover, .password article ul li dt input.text:focus, .password article ul li dt input.password:hover, .password article ul li dt input.password:focus {
 	border: 2px solid #7fcaf1;
 	margin: 0px;
 }
@@ -140,7 +141,7 @@
 .password article ul li dt font {
 	display: inline-block;
 }
-.password article ul li dt.succeed input[type="text"], .password article ul li dt.succeed input[type="password"] {
+.password article ul li dt.succeed input.text, .password article ul li dt.succeed input.password {
 	border: 1px solid #77a735;
 	margin: 1px;
 }
@@ -151,7 +152,7 @@
 	margin: 0 0 0 5px;
 	text-indent: 20px;
 }
-.password article ul li dt.error input[type="text"], .password article ul li dt.error input[type="password"] {
+.password article ul li dt.error input.text, .password article ul li dt.error input.password {
 	border: 1px solid #f4784a;
 	margin: 1px;
 }
