--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -53,9 +53,9 @@ $(function(){
         {% else %}
        <form action="{{ path('_default_fastLogin') }}" method="post" name="form1" id="form1">
         <div class="before">
-            <p><input name="email" type="text"></p>
-            <p><input name="pwd" type="password"></p>
-            <p><input name="" id='login' type="image" src="{{ asset('images/indexLoginBtn.jpg') }}"><label>
+            <p><input name="email" type="text" class="text"></p>
+            <p><input name="pwd" type="password" class="password"></p>
+            <p><input name="" id='login' type="image" class="image" src="{{ asset('images/indexLoginBtn.jpg') }}"><label>
             <input name="remember_me" type="checkbox" value="1">记住我</label> | <a class="forget" href="{{ path('_user_resetPwd') }}">忘记密码?</a></span></p> 
             <p><a class="reg" href="{{ path('_user_reg') }}">免费注册</a></p>
         </div>
