--- a/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
@@ -37,29 +37,29 @@ function check(){
           <dd>请输入新密码：</dd>
           {%  if codeflag==2 %}
           <dt id="pwdError" class="error">
-            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font>
+            <input name="pwd" id="pwd" type="password" class="password"><font>&nbsp;</font>
             <br />
             <span>请输入密码</span></dt>
             {% elseif codeflag==3 %}
             <dt id="pwdError" class="error">
-            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font>
+            <input name="pwd" id="pwd" type="password" class="password"><font>&nbsp;</font>
             <br />
             <span>密码为6-20个字符，不能含特殊符号</span></dt>
             {% else %}
             <dt id="pwdError">
-            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font></dt>
+            <input name="pwd" id="pwd" type="password" class="password"><font>&nbsp;</font></dt>
             {% endif %}
         </li>
         <li>
           <dd>请再次输入新密码：</dd>
            {%  if codeflag==4 %}
           <dt id="newPwdError" class="error">
-            <input name="newPwd" id="newPwd"  type="password"><font>&nbsp;</font>
+            <input name="newPwd" id="newPwd"  type="password" class="password"><font>&nbsp;</font>
              <br />
             <span>2次密码不相同</span></dt>
             {% else %}
               <dt id="newPwdError">
-            <input name="newPwd" id="newPwd"  type="password"><font>&nbsp;</font>
+            <input name="newPwd" id="newPwd"  type="password" class="password"><font>&nbsp;</font>
             </dt>
              {% endif %}
         </li>
