--- a/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
@@ -58,7 +58,7 @@ function check(){
       <h2>输入邮箱地址 > <span>重置密码</span></h2>
       <div class="message" style="display:none;"><img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">密码修改成功！</div>
       <p>请输入您注册时填写的邮箱</p>
-      <p><input name="email" type="text" id="email"></p>
+      <p><input name="email" type="text" class="text" id="email"></p>
       <p><a id="sendEmail" onclick='check();'>下一步</a></p>
       <p class="prompt">重置密码邮件已经发送至您的邮箱，<span id="second">59</span>秒后可重新发送。</p>
       <div class="clear"></div>
