--- a/src/Jili/ApiBundle/Resources/views/Callboard/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/index.html.twig
@@ -17,7 +17,7 @@
 
 <div class="webArticle newsList">
   <article>
-    <h2><span>公告中心</span></h2>
+    <h2><span>公告列表</span></h2>
     <ul class="news">
      {% for item in pagination %}
               <li>
