--- a/web/css/login.css
+++ b/web/css/login.css
@@ -78,17 +78,18 @@
 	color:#FFF;
 	font-weight:bold;
 	font-size:18px;
-	width:135px;
-	height:45px;
+	width:134px;
+	height:44px;
 	margin-right:10px;
 	text-align:center;
 	border-radius:5px;
 	display:inline-block;
-	border:1px solid #fb742c;
 	background-color:#ff8f4b;
-	background-image: -moz-linear-gradient(top, #ff8f4b, #fb742c); /* Firefox */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ff8f4b), color-stop(1, #fb742c)); /* Saf4+, Chrome */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8f4b', endColorstr='#fb742c', GradientType='0'); /* IE*/
+	background-image: url("../images/logBtn.png");
+}
+.login article .loginForm li.loginBtn input.submit:hover{
+	opacity: .7;
+	Filter:alpha(opacity=70);
 }
 .login article .loginForm li.otherLogin a{
 	display: inline-block;
@@ -112,16 +113,17 @@
 	font-weight:bold;
 	font-size:18px;
 	width:135px;
-	height:45px;
+	height:46px;
 	line-height:45px;
-	width:270px;
+	width:276px;
 	margin-right:10px;
 	text-align:center;
 	border-radius:5px;
 	display:inline-block;
-	border:1px solid #dadada;
 	background-color:#ececec;
-	background-image: -moz-linear-gradient(top, #f5f5f5, #ececec); /* Firefox */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f5f5f5), color-stop(1, #ececec)); /* Saf4+, Chrome */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#ececec', GradientType='0'); /* IE*/
+	background-image: url("../images/signBtn.png")
+}
+.login article .regArea a.reg:hover{
+	opacity: .7;
+	Filter:alpha(opacity=70);
 }
