--- a/web/css/default.css
+++ b/web/css/default.css
@@ -124,7 +124,7 @@ footer section a, footer section span{
 	margin:10px;
 	color:#666;
 }
-footer section span.about{
+footer section span.footAbout{
 	height:16px;
 	display:inline-block;
 }
