--- a/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
@@ -26,7 +26,7 @@
         {% else %}
         <a href="{{ path('_default_error') }}" target="_blank">
         {% endif %}
-       <img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
+       <img class="goMailBtn" src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
         <p><a class="again" href="#">没收到？再次发送！</a></p>
         </div>
         <div class="notMail">
