--- a/web/css/password.css
+++ b/web/css/password.css
@@ -82,6 +82,8 @@
 }
 .password article p a:hover {
 	text-decoration: none;
+	opacity:.8;
+	Filter:alpha(opacity=80);
 }
 .password article p a.disabled{
 	border: 1px solid #808080;
@@ -183,4 +185,6 @@
 }
 .password article ul li dt .saveBtn:hover {
 	text-decoration: none;
+	opacity: .8;
+	Filter:alpha(opacity=80);
 }
