--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -51,7 +51,7 @@ $(function(){
             	{% else %}
             	   <div class="photo"> <a href="{{ path('_user_info')}}" ><img src="{{ asset('images/default_face.jpg') }}" width="90" height="90"/></a></div>
             	 {% endif %}
-                <p>您好，<a href="{{ path('_user_info')}}">{{ user.nick }}</a><br/><br/><a href="{{ path('_user_info')}}"><img src="{{ asset('images/myCenterBtn.png') }}"/></a></p>
+                <p>您好，<a href="{{ path('_user_info')}}">{{ user.nick }}</a><br/><br/><a class="personal" href="{{ path('_user_info')}}"><img src="{{ asset('images/myCenterBtn.png') }}"/></a></p>
                 <div class="clear"></div>
                 <p class="point">当前米粒数：<span>{{ user.points }}</span></p>
             </div>
