Revert "对应 issue #58"
This reverts commit 3a6603adbfc749cd36a7df68f43f1ecf1e2da6e4.

--- a/src/Jili/ApiBundle/Resources/views/footer.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/footer.html.twig
@@ -1,5 +1,5 @@
 <footer>
-	<section><p><a href="{{ path('_default_about') }}" target="_blank">关于积粒网</a>|<a href="{{ path('_user_agreement') }}" target="_blank">服务条款</a>|<a href="{{ path('_default_service') }}">广告服务</a>|<span><a href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
+	<section><p><a href="{{ path('_default_about') }}" target="_blank">关于积粒网</a>|<a href="{{ path('_user_agreement') }}" target="_blank">服务条款</a>|<a href="#">广告服务</a>|<span><a href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
     <p><span class="footAbout">关注我们：</span><a class="sina" href="#">新浪微博</a><a class="tencent" href="#">腾讯微博</a><a class="weixin" href="#">微信</a></p>
 	</section>
 </footer>
