--- a/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
@@ -11,6 +11,43 @@
 <link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$("#prompt").hide();
+	$(".again").click(function(){
+		$.ajax({
+			url : "{{ path('_user_reSend') }}?id="+$('#uid').val()+"&code="+$('#code').val()+"&nick="+$('#nick').val()+"&email="+$('#email').val(),
+			type : 'get',
+			success : function(msg) {
+				if(msg==1){
+					//alert('发送成功,请查收');
+					SysSecond = parseInt($("#second").html()); //这里获取倒计时的起始时间 
+					//SysSecond = 5;
+					InterValObj = window.setInterval(SetRemainTime, 1000); //间隔函数，1秒执行 
+					$("#prompt").show();
+					$('.again').removeAttr('href');
+					$(".again").attr('href','javascript:void(0);');
+					$(".again").html('已发送&nbsp;&nbsp;');
+				}else{
+					alert('发送失败');
+				}
+			}
+		});
+	});
+});                  
+function SetRemainTime() { 
+    if (SysSecond > 0) { 
+        SysSecond = SysSecond - 1; 
+        var second = Math.floor(SysSecond % 60);             // 计算秒     
+        $("#second").html(second); 
+    } else {
+    	$("#second").html('59');
+    	$(".again").html("没收到？再次发送！");
+        $("#prompt").hide();
+        window.clearInterval(InterValObj);
+    } 
+} 
+</script>
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
@@ -26,8 +63,12 @@
         {% else %}
         <a href="{{ path('_default_error') }}" target="_blank">
         {% endif %}
-       <img class="goMailBtn" src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
-        <p><a class="again" href="#">没收到？再次发送！</a></p>
+       <img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
+        <p><a class="again" >没收到？再次发送！</a><span id="prompt"><span id="second">5</span>秒后可重新发送</span></p>
+         <input type='hidden' id='uid' value='{{ user.id }}'/>
+        <input type='hidden' id='code' value='{{ user.code }}'/>
+        <input type='hidden' id='nick'  value='{{ user.nick  }}'/>
+        <input type='hidden' id='email' value='{{ user.email }}'/>
         </div>
         <div class="notMail">
         	<h6>还没收到激活邮件？</h6>
