--- a/web/css/adMore.css
+++ b/web/css/adMore.css
@@ -51,6 +51,8 @@
 	padding: 10px 0 0;
 	display:inline-block;
 	text-align:left;
+	line-height:200%;
+	font-size:14px;
 }
 .adMore article div.rule .article h3{
 	font-size:14px;
