--- a/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
@@ -13,7 +13,7 @@
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
-  <h2><span>兑换信息</span></h2>
+  <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
   <aside>
     <section>
       <div class="photo"><img src="{{ asset('other/photo')}}" width="180" height="180"></div>
@@ -26,7 +26,7 @@
     <div class="wenwen">
       <div class="finish">
    	    <div class="img"><img width="108" height="82" src="{{ asset('images/regFinish.jpg')}}"></div>
-        <h2>我们已经收到您的兑换申请！</h2>
+        <h2><img src="{{ asset('images/messageExchange.gif')}}" alt="我们已经收到您的兑换申请！"></h2>
         <p>兑换将在下一个工作日（遇节假日顺延）完成，请关注您的兑换状态邮件通知。</p>
         <hr />
         <p>※ 如您的信息有误造成兑换失败，米粒将会自动返还到您的账户。</p>
