--- a/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
@@ -13,7 +13,7 @@
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
-  <h2><span>兑换信息</span></h2>
+  <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
   <aside>
     <section>
       <div class="photo"><img src="{{ asset('other/photo')}}" width="180" height="180"></div>
