--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -61,7 +61,7 @@ function addClass(type){
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle history">
-  <h2><span>兑换历史</span></h2>
+  <h2><span><img src="{{ asset('images/exchangeHistory.gif')}}" alt="兑换历史"></span></h2>
   <aside>
   {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
