--- a/src/Jili/ApiBundle/Resources/views/User/forgetPass.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/forgetPass.html.twig
@@ -53,7 +53,7 @@ $(document).ready(function(){
     	 {%  endif %}
         </span></dt></li>
         <li><dd></dd><dt><input name="ck" type="checkbox" value="1" id="ck" checked="checked">我已认真阅读并同意接受<a href="{{ path('_user_agreement') }}" target="_blank" class="provision">《积粒网会员协议》</a></dt></li>
-        <li><dd></dd><dt><input type='button' name='but' id='but' value='创建账号'/></dt></li>
+        <li><dd></dd><dt><input type='button' name='but' id='but' value='创建账号' class='regBtn'/></dt></li>
     </ul>
     </form>
     </div>
