--- a/web/css/adMore.css
+++ b/web/css/adMore.css
@@ -93,7 +93,7 @@
     top: 10px;
     width: 213px;
 }
-.actionTitle .getBtn:hover img{
+.actionTitle a.getBtn:hover img{
 	opacity: .8;
 	Filter:alpha(opacity=80);
 }
