--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -24,7 +24,7 @@ $(document).ready(function(){
         <area shape="rect" coords="661,618,759,637" href="https://www.91wenwen.net/signup/profile" target="_blank">
       </map>
  </div>
-    <div class="btnArea"><img src="{{ asset('images/exchangeBtn_inactive.jpg')}}" width="208" height="93"></div>
+    <div class="btnArea"><a href="{{ path('_exchange_info') }}"><img src="{{ asset('images/exchangeBtn.jpg')}}"></a></div>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
