--- a/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
@@ -9,18 +9,14 @@
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
   <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
   <aside>
-    <section>
-      <div class="photo"><img src="{{ asset('other/photo')}}" width="180" height="180"></div>
-      <p class="name">您好，{{ user.nick }}</p>
-      <p class="point">当前米粒数<br />
-        <span>{{ user.points }}</span></p>
-    </section>
+    {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
   <article>
     <div class="wenwen">
