--- a/src/Jili/ApiBundle/Resources/views/Admin/editAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/editAdver.html.twig
@@ -39,8 +39,8 @@ KE.show({
 <tr><td>广告说明:</td><td><textarea id="info" cols="120" rows="10" name="info" style="width:700px;height:300px;">{% if info %} {{ info }} {% else %} {{ adver.content }} {% endif %}</textarea></td></tr>
 <tr><td>广告链接:</td><td><input type="text" name="url" size='60' value="{% if url %} {{ url }} {% else %} {{ adver.imageurl }} {% endif %}"/></td></tr>
 <tr><td>广告类型:</td><td><input type="radio" name="category" value="1" {% if adver.incentiveType==1 %} checked="checked" {% endif %}/>CPA
-<input type="radio" name="category" vslue="2" {% if adver.incentiveType==2 %} checked="checked" {% endif %}/>CPS</td></tr>
-<tr><td>广告积分:</td><td><input type="text" name="score" size='60' value="{% if score %} {{ score }} {% else %} {{ adver.incentive }} {% endif %}"/></td></tr>
+<input type="radio" name="category" value="2" {% if adver.incentiveType==2 %} checked="checked" {% endif %}/>CPS</td></tr>
+<tr><td>广告积分:</td><td><input type="text" name="score" size='10' onkeyup="value=value.replace(/[^\d]/g,'') "onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" value="{% if adver.incentiveType==1 %} {{ adver.incentive }} {% else %} {{ adver.incentiveRate }}  {% endif %}"/></td></tr>
 <tr><td>广告规则:</td><td><textarea id="rule" cols="120" rows="10" name="rule" style="width:700px;height:300px;">{% if rule %} {{ rule }} {% else %} {{ adver.info }} {% endif %}</textarea></td></tr>
 <tr><td>广告图片:(300X250)</td><td><img src="{{ asset(adver.iconImage) }}"/>{{ form_widget(form.large) }}(不传为原来的图片)</td></tr>
 <tr><td>广告图片:(200X130)</td><td><img src="{{ asset(adver.listImage) }}"/>{{ form_widget(form.small) }}(不传为原来的图片)</td></tr>
