--- a/src/Jili/ApiBundle/Resources/views/Admin/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/header.html.twig
@@ -3,6 +3,16 @@
 <HEAD>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
+<script type="text/javascript">
+function quit(){
+	if (confirm('确定要退出吗？')){
+		parent.window.location="{{ path('_admin_login') }}";
+		return true; 
+	} 
+	else 
+		return false;
+}
+</script>
 </HEAD>
 <BODY>
 <TABLE cellSpacing=0 cellPadding=0 width="100%" background="{{ asset('images/admin/header_bg.jpg')}}" border=0>
@@ -10,8 +20,8 @@
     <TD width=260><IMG height=56 src="{{ asset('images/admin/header_left.jpg')}}" width=260></TD>
     <TD style="FONT-WEIGHT: bold; COLOR: #fff; PADDING-TOP: 20px" 
       align=middle>当前用户：admin &nbsp;&nbsp;  <A style="COLOR: #fff" 
-      onclick="if (confirm('确定要退出吗？')) return true; else return false;" 
-      href="" target=_top>退出系统</A> 
+      onclick="quit()";
+      href="javascript:void(0);" target=_top>退出系统</A> 
     </TD>
     <TD align=right width=268><IMG height=56 src="{{ asset('images/admin/header_right.jpg')}}" width=268></TD></TR></TABLE>
 <TABLE cellSpacing=0 cellPadding=0 width="100%" border=0>
