--- a/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
@@ -14,6 +14,7 @@
             <th>广告图片</th>
             <th>广告类型</th>
             <th>操作</th>
+            <th>状态</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
@@ -29,8 +30,10 @@
          {% endif %}
           </td>
           <td align="center"><a href="{{ path('_admin_editAdver',{'id':item.id}) }}">编辑</a>&nbsp;&nbsp;
-          <a href="{{ path('_admin_delAdver',{'id':item.id}) }}" onclick="if (confirm('确定要退出吗？')) return true; else return false;">删除</a>
+          <a href="{{ path('_admin_delAdver',{'id':item.id}) }}" onclick="if (confirm('确定要删除吗？')) return true; else return false;">删除</a>
+          &nbsp;&nbsp;<a href="{{ path('_admin_stopAdver',{'id':item.id}) }}" onclick="if (confirm('确定要停止吗？')) return true; else return false;">停止</a>
           </td>
+           <td align="center">{% if date(item.endTime) < date() %} 已停止 {% else %} 投放中 {% endif %}</td>
         </tr>
          {% endfor %}
          {%  endif %}
