--- a/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
@@ -22,7 +22,7 @@
           <td align="center">{{ item.author }} </td>
           <td align="center">{{ item.startTime.date | date('Y-m-d') }}</td>
           <td align="center"><a href="{{ path('_admin_editCallboard',{'id':item.id}) }}">编辑</a>&nbsp;&nbsp;
-          <a href="{{ path('_admin_delCallboard',{'id':item.id}) }}" onclick="if (confirm('确定要退出吗？')) return true; else return false;">删除</a>
+          <a href="{{ path('_admin_delCallboard',{'id':item.id}) }}" onclick="if (confirm('确定要删除吗？')) return true; else return false;">删除</a>
           </td>
         </tr>
          {% endfor %}
