--- a/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
@@ -11,11 +11,24 @@
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
+$(document).ready(function() {
+	$("#active").hide();
+	$("#ck").click(function(){
+		if ($("#ck").attr("checked")){
+    		$("#unactive").hide();
+    		$("#active").show();
+		}else{
+			$("#active").hide();
+			$("#unactive").show();
+			}
+		
+	});
+    
+});
+
 function change(){
-	if ($("#ck").attr("checked")){
 		if($("#over").html()>=0)
-		$("#form1").submit();
-	} 
+			$("#form1").submit();
 }
 function changePoint(){
 	var total = $("#point").val()*500;
@@ -36,7 +49,7 @@ function changePoint(){
   <article>
     <div class="wenwen">
       <div class="form">
-       {% if pointsExchange %}
+       {% if user.wenwenUser %}
         <dd>您的91问问账号：</dd>
         <dt>
           {{ user.wenwenUser }}
@@ -47,7 +60,7 @@ function changePoint(){
        <dd>您的91问问账号：</dd>
         <dt>
           <input name="wenwen" type="text">
-          <input name="ck" id="ck" type="checkbox" value="1" {% if ck==1 %} checked="checked" {% endif %}>
+          <input name="ck" id="ck" type="checkbox" value="1" >
           确定<br />
           <span class="warn">该账号将在第一次兑换成功后与您的积粒网账号自动绑定</span><br />
           <span class="account">还没有91问问账号？</span><a href="https://www.91wenwen.net/signup/profile" target="_blank">点这里去注册 >></a></dt>
@@ -81,7 +94,8 @@ function changePoint(){
      {% else %}
      {% endif %}
      </span></div>
-      <div class="btnArea mt50"><img onclick="change();" src="{{ asset('images/changeEnterBtn.jpg')}}" width="175" height="60"></div>
+      <div class="btnArea mt50"><img id="active" onclick="change();" src="{{ asset('images/changeEnterBtn.jpg')}}" width="175" height="60">
+      <img id="unactive" src="{{ asset('images/changeEnterBtn_unactive.jpg')}}" width="175" height="60"></div>
     </div>
   </article>
   </form>
