--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -85,9 +85,9 @@ function addClass(type){
         <tr>
           <td>{{ item.exchangeDate.date }}</td>
           <td>{{ item.type }}</td>
-          <td>50元</td>
-          <td>{{ item.exchangeDate.date }}</td>
-          <td>兑换成功</td>
+          <td>{{ item.targetPoint }}</td>
+          <td>{% if item.status %} {{ item.finishDate.date }} {% else %} {% endif %}</td>
+          <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
          {%  endif %}
