--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -202,9 +202,9 @@ $(document).ready(function(){
         <tr>
           <td>{{ item.exchangeDate.date }}</td>
           <td>{{ item.type }}</td>
-          <td>50元</td>
-          <td>{{ item.exchangeDate.date }}</td>
-          <td>兑换成功</td>
+           <td>{{ item.targetPoint }}</td>
+          <td>{% if item.status %} {{ item.finishDate.date }} {% else %} {% endif %}</td>
+          <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
           <center><p><a href="{{ path('_user_exchange',{'type': 1}) }}">更多</a></p></center>
