对应 issue #101 编辑广告位置

--- a/src/Jili/ApiBundle/Resources/views/Admin/editPostion.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/editPostion.html.twig
@@ -12,6 +12,8 @@
 <tr><td>&nbsp;</td><td>
         {% if codeflag==1 %}
         <font color='red'>都为必填项</font>
+        {% elseif codeflag==2 %}
+        <font color='red'>位置序号已存在</font>
         {% else %}
         &nbsp;
         {% endif %}
