--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -110,6 +110,24 @@
             target=main>编辑公告</A></TD></TR>
         <TR height=4>
           <TD colSpan=2></TD></TR></TABLE>
+          
+           <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(5) 
+            href="javascript:void(0);">成果网对接管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child5 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_importAdver') }}" 
+            target=main>导入成果网数据</A></TD></TR>
+        <TR height=4>
+          <TD colSpan=2></TD></TR></TABLE>
       </BODY></HTML>
     
 
