--- a/src/Jili/ApiBundle/Resources/views/Admin/importAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/importAdver.html.twig
@@ -10,7 +10,18 @@
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>csv文件:<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
+
+
 </table>
+{% if code %}
+    {% for item in code %}
+        <center><font color='red'>{{ item }}</font></center>
+    {% endfor %}
+{% else %}
+    {% if success == 1 %}
+         <center><font color='red'>数据插入成功 </font></center>
+    {% endif %}
+{% endif %}
 </form>
 </BODY></HTML>
 
