对应 issue #111 第一次兑换后等待绑定才能下次兑换

--- a/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/info.html.twig
@@ -103,6 +103,8 @@ function changePoint(){
      <font color='red'>请输入91问问账号</font>
      {% elseif code==2 %}
      <font color='red'>91问问账号为邮件格式</font>
+      {% elseif code==3 %}
+     <font color='red'>已成功兑换，等待账号绑定</font>
      {% else %}
      {% endif %}
      </span></div>
